--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_SUNAT_TOKEN=
+API_SUNAT_URL_DNI=
+API_SUNAT_URL_RUC=
